--- a/styles/style.css
+++ b/styles/style.css
@@ -274,7 +274,6 @@ button{
   height: max-content;
   outline: inset 1px;
   padding: 10px;
-  user-select: none;
 }
 
 .field-row{
@@ -283,6 +282,11 @@ button{
   flex-wrap: wrap;
   margin-top: 10px;
   align-items: center;
+}
+
+.advert[img]{
+  max-width: 400px;
+  max-height: 200px;
 }
 
 img[aria-label="windowicon"]{
