--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body{
     padding: 0;
     width: 100%;
     height: 100vh;
-    background-image: url("../public/resources/img/bg.jpg");
+    background-image: url("../resources/img/bg.jpg");
     background-size: cover;
     background-position: center bottom;
     background-repeat: no-repeat;
@@ -161,18 +161,18 @@ button{
 }
 
 .title-bar-controls button[aria-label="Close"]::before{
-  background: url("../public/resources/svg/X.svg") no-repeat center;
+  background: url("../resources/svg/X.svg") no-repeat center;
   background-size: 14px;
 }
 
 .title-bar-controls button[aria-label="Minimize"]::before{
-  background: url("../public/resources/svg/Minimise.svg") no-repeat center;
+  background: url("../resources/svg/Minimise.svg") no-repeat center;
   background-size: 14px;
   background-position-y: 10px;
 }
 
 .title-bar-controls button[aria-label="Maximize"]::before{
-  background: url("../public/resources/svg/Maximise.svg") no-repeat center;
+  background: url("../resources/svg/Maximise.svg") no-repeat center;
   background-size: 14px;
 }
 
@@ -359,7 +359,7 @@ img[aria-label="windowicon"]{
   width: 40px;
   height: 40px;
   position: absolute;
-  background-image: url("../public/resources/img/WindowsIdle.png");
+  background-image: url("../resources/img/WindowsIdle.png");
   background-size: contain;
   background-position: center;
   left: 10px;
@@ -382,7 +382,7 @@ img[aria-label="windowicon"]{
   position: absolute;
   left: 10px;
   z-index: 3;
-  background-image: url("../public/resources/img/WindowsActivated.png");
+  background-image: url("../resources/img/WindowsActivated.png");
   background-position: center;
   background-size: 60px;
   opacity: 0;
@@ -398,7 +398,7 @@ img[aria-label="windowicon"]{
   padding: 0px !important;
   min-height: 0px !important;
   min-width: 0px !important;
-  background-image: url("../public/resources/img/WindowsActivated.png");
+  background-image: url("../resources/img/WindowsActivated.png");
   background-position: center;
   background-size: 60px;
   opacity: 1;
@@ -406,7 +406,7 @@ img[aria-label="windowicon"]{
 
 .startbutton:active{
   opacity: 1;
-  background-image: url("../public/resources/img/WindowsActivated.png");
+  background-image: url("../resources/img/WindowsActivated.png");
   background-position: center;
   background-size: 60px;
 }
@@ -424,7 +424,7 @@ img[aria-label="windowicon"]{
       min-width: 0px !important;
       position: absolute;
       opacity: 1;
-      background-image: url("../public/resources/img/WindowsActivated.png");
+      background-image: url("../resources/img/WindowsActivated.png");
       width: 40px;
       height: 40px;
       left: 10px;
@@ -454,7 +454,7 @@ img[aria-label="windowicon"]{
   height: 39px;
   border-radius: 2px;
   z-index: 1;
-  background-image: url("../public/resources/img/Tint.png");
+  background-image: url("../resources/img/Tint.png");
   background-color: #ffffff17;
   transition-duration: .05s;
   box-shadow:0 0 0 2px #000000;
@@ -475,7 +475,7 @@ img[aria-label="windowicon"]{
   height: 39px;
   border-radius: 2px;
   z-index: 1;
-  background-image: url("../public/resources/img/Tint.png");
+  background-image: url("../resources/img/Tint.png");
   background-color: #ffffff2e;
   box-shadow:0 0 0 2px #000000;
 }
@@ -495,7 +495,7 @@ img[aria-label="windowicon"]{
 .aeropeek{
   width: 15px;
   height: 40px;
-  background-image: url("../public/resources/img/Tint.png");
+  background-image: url("../resources/img/Tint.png");
   background-color: #0000002e;
   outline: inset 1px #ffffff !important;
   box-shadow:0 0 0 2px #000000;
