--- a/src/App.css
+++ b/src/App.css
@@ -352,7 +352,7 @@ img[aria-label="windowicon"]{
     box-shadow:0 0 0 1px #ffffff50,
                0 0 0 2px #00000050;
     display: flex;
-    z-index: 9999999999999;
+    z-index: 99;
 }
 
 .startorb{
@@ -671,3 +671,21 @@ transform: translateX(50%) translateY(-50px) scale(0.7);
   .taskbarbutton:hover::before {
     opacity: 1;
   }
+
+
+  .login-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 9999;
+    background-image: url("resources/img/bg.jpg");
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
