--- a/src/App.css
+++ b/src/App.css
@@ -681,7 +681,7 @@ transform: translateX(50%) translateY(-50px) scale(0.7);
     width: 100%;
     height: 100vh;
     z-index: 9999;
-    background-image: url("resources/img/bg.jpg");
+    background-image: url("../resources/img/bg.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
